--- a/style.css
+++ b/style.css
@@ -376,3 +376,261 @@ opacity:1;
     color:var(--bg-color);
 }
 
+
+/*blog css*/
+
+.blog-content{
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,auto));
+    align-items:center;
+    gap:1.7rem;
+    margin-top:4rem;
+}
+
+.blog-img{
+    overflow:hidden;
+}
+
+.blog-img img{
+    display: block;
+    width:100%;
+    height:390px;
+    object-fit:cover;
+    transition:  transform 1s;
+    cursor:pointer;
+}
+    
+.blog-img img:hover{
+    transform:scale(1.1);
+}
+
+.blog-in{
+    margin-top:10px;
+    display:flex;
+    flex-wrap:nowrap;
+    justify-content:space-between;
+    gap:30px;
+    padding: 5px 30px;
+}
+
+.blog-left h3{
+    font-size:35px;
+    font-weight:800;
+    margin-bottom:7px;
+}
+
+.bbb-in h6{
+    padding:3px 10px;
+    border-radius: 2px;
+    font-size:14px;
+    font-weight:600;
+    background:var(--main-color);
+    color:var(--bg-color);
+}
+
+.blog-right h4{
+    font-size:22px;
+    font-weight:700;
+    margin-bottom:5px;
+}
+
+.blog-right p{
+    color:var(--other-color);
+    font-size:var(--p-font);
+}
+
+
+
+/*footer*/
+
+.footer{
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(300px,auto));
+    gap:1rem;
+}
+
+.footer-box .logo img{
+    width:170px;
+    max-width:100%;
+    height:auto;
+    margin-bottom:1rem;
+}
+
+.footer-box h5{
+    font-size:18px;
+    font-weight:600;
+    margin-bottom:1rem;
+    line-heitght:1.3;   
+}
+
+.icons i{
+    display:inline-block;
+    color:var(--text-color);
+    margin-right:10px;
+    font-size:23px;
+    transition:all 1s ease;
+}
+
+.icons i:hover{
+    color:(--main-color);
+    transform:rotate3d(0,0,1,360deg);
+}
+
+.footer-box h3{
+    font-size:18px;
+    font-weight:700;
+    margin-bottom:20px;
+}
+
+.footer-box li{
+    margin-bottom:14px;
+}
+
+.footer-box li a{
+    display:block;
+    color:var(--other-color);
+    font-size:var(--p-font);
+    transition:all 1s ease;
+}
+
+.footer-box li a:hover{
+    transform:translatey(-6px);
+    color:var(--main-color);
+}
+
+.copyright p{
+    text-align:center;
+    padding:18px;
+    font-size:16px;
+    font-weight:500;
+    color:var(--text-color);
+}
+
+.scroll-btnnn{
+    position:fixed;
+    bottom:2.9rem;
+    right:3.5rem;
+}
+
+.scroll-btnnn i{
+    font-size:27px;
+    color:var(--bg-color);
+    padding:10px;
+    background:var(--main-color);
+    border-radius:9px;
+}
+
+
+
+
+@media(max-width: 1400px){
+    header{
+        padding:15px 5%;
+    }
+    section{
+        padding: 70px 5% 70px;
+    }
+    .banner{
+        padding:10px 5% 10px;
+    }
+}
+
+
+
+@media(max-width: 1100px){
+    header{
+        padding:15px 2%;
+    }
+    section{
+        padding: 70px 2% 70px;
+    }
+    .banner{
+        padding:10px 2% 10px;
+    }
+    :root{
+        --h1-font:5rem;
+        --h2-font:2.3rem;
+        --p-font:1rem;
+    }
+    .cta-content h2{
+        font-size:3.4rem
+    }
+    .store-content{
+        grid-template-columns:repeat(auto-fit,minmax(350px,auto));
+    }
+    .banner-content{
+        grid-template-columns:repeat(auto-fit,minmax(450px,auto));
+    }
+    .scroll-btnnn{
+        position:fixed;
+        bottom:2.1rem;
+        right:2.2;
+    }
+}
+
+
+@media(max-width: 1070px){
+
+    #menu-icon{
+        display:block;
+    }
+
+    .navlist{
+        position:absolute;
+        top:100%;
+        width:100%;
+        height:350px;
+        right:-100%;
+        display:flex;
+        flex-direction:colums;
+        background:var(--bg-color);
+        border-radius:0px 0px 20px 20px;
+        padding:10px 0;
+        box-shadow:0px 20px 20px rgb(15 54 55 / 20%);
+        clip-path: circle(144% at 0% 0%);
+        transition:all 1s ease-in-out;
+    }
+    .navlist a{
+        display:block;
+        padding:0;
+        margin:bottom:22px;
+        font-size:22px;
+        font-weight:600;
+        border-bottom:none;
+    }
+    .navlist a:hover{
+        border-bottom:none;
+    }
+    .navlist.open{
+        right:0;
+    }
+   
+}
+
+
+
+@media(max-width: 1070px){
+    :root{
+        --h1-font:3.4rem;
+        --h2-font:2rem;
+        --p-font:15px;
+    }
+
+    .cta-content h2{
+        font-size:2.8rem;
+    }
+    .banner-in h3{
+        margin:5px 0;
+        font-size:24px;
+    }
+    .b-btnnn{
+        padding:7px 2px;
+    }
+    .banner{
+        padding:20px 5% 20px;
+    }
+    .banner-content{
+        grid-template-columns:repeat(auto-fit,minmax(300px,auto));
+    }
+
+}
